--- a/pages/html/contato.html
+++ b/pages/html/contato.html
@@ -1,4 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+<section class="section-redes-sociais">
+    <h1>Redes sociais</h1>
+    <div>
+        <p>Escola a rede social oficial e entre em contato para mais informações.</p>
+        <nav>
+            <a
+                href="https://api.whatsapp.com/send?phone=5548999066699&text=Ol%C3%A1%20de%20qual%20solu%C3%A7%C3%A3o%20seu%20neg%C3%B3cio%20voc%C3%AA%20esta%20precisando%3F">
+                <img alt="Twitter" src="../../docs/icons/whatsapp-logo-icone.png">
+            </a>
+
+            <a href="https://www.facebook.com/fenixds.br">
+                <img alt="GitHub" src="../../docs/icons/facebook-logo-icone-.png">
+            </a>
+
+            <a href="https://www.instagram.com/fenixds.br/">
+                <img alt="Linkedin" src="../../docs/icons/instagram-logo-icone.png">
+            </a>
+        </nav>
+    </div>
+</section>
+
 </html>
