--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="shortcut icon" href="docs/icons/icone-web.png" type="image/x-icon" />
     <link rel="stylesheet" href="pages/css/global.css">
     <link rel="stylesheet" type="text/css" href="pages/css/home.css">
+    <link rel="stylesheet" type="text/css" href="pages/css/portfolio.css">
+    <link rel="stylesheet" type="text/css" href="pages/css/contato.css">
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script type="text/javascript" src="includes/upload/jquery-1.4.2.min.js"></script>
@@ -15,24 +17,89 @@
 
 <body>
     <header>
-        <div>
+        <div class="header-logo">
             <img alt="Logo" src="docs/imgs/logo-web.png">
-            <h1>Revelando o mundo digital</h1>
+            <h1>Fênix D.S</h1>
+            <h2>Revelando o mundo digital</h2>
         </div>
 
         <div>
             <nav>
-                <button onclick="carregarHTML('pages/html/home.html')">Home</button>
-                <button onclick="carregarHTML('pages/html/instituicao.html')">Instituição</button>
+                <button onclick="home()">Home</button>
                 <button onclick="carregarHTML('pages/html/portfolio.html')">Portfólio</button>
                 <button onclick="carregarHTML('pages/html/contato.html')">Contato</button>
             </nav>
         </div>
     </header>
 
-    <section>
-        <div id="conteudo"></div>
+    <section id="home">
+        <div class="conteudo">
+            <div>
+                <h1>
+                    <span>Conheça algumas de nossas ferramentas ou</span><br>
+                    <span>solicite um aplicativo personalizado.</span>
+                </h1>
+            </div>
+            <div class="container">
+                <div class="container-slides" onclick="carregarHTML('pages/html/portfolio.html')">
+                    <input type="radio" name="radios-slides" id="radio-slides-1" checked>
+                    <input type="radio" name="radios-slides" id="radio-slides-2">
+                    <input type="radio" name="radios-slides" id="radio-slides-3">
+                    <input type="radio" name="radios-slides" id="radio-slides-4">
+
+
+                    <div class="container-slides-itens inicio">
+                        <img src="docs/portfolio/sitec-card.png" alt="Sitec">
+                    </div>
+
+                    <div class="container-slides-itens">
+                        <img src="docs/portfolio/sitec.png" alt="Sitec">
+                    </div>
+
+                    <div class="container-slides-itens">
+                        <img src="docs/portfolio/saged-card.png" alt="Saged">
+                    </div>
+
+                    <div class="container-slides-itens">
+                        <img src="docs/portfolio/saged.png" alt="Saged">
+                    </div>
+
+                    <div class="navegacao-auto">
+                        <div class="navegacao-auto-btn1"></div>
+                        <div class="navegacao-auto-btn2"></div>
+                        <div class="navegacao-auto-btn3"></div>
+                        <div class="navegacao-auto-btn4"></div>
+                    </div>
+                </div>
+
+                <div class="navegacao-manual">
+                    <label for="radio-slides-1" class="navegacao-manual-btn"></label>
+                    <label for="radio-slides-2" class="navegacao-manual-btn"></label>
+                    <label for="radio-slides-3" class="navegacao-manual-btn"></label>
+                    <label for="radio-slides-4" class="navegacao-manual-btn"></label>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <footer>
+        <span>Desenvolvido por Fênix D.S - @2022 | <a href="https://goo.gl/maps/kpzscQxKdwEJ5CS87">Sombrio-SC</a> | (48)
+            99906.6699</span>
+        <div>
+            <a
+                href="https://api.whatsapp.com/send?phone=5548999066699&text=Ol%C3%A1%20de%20qual%20solu%C3%A7%C3%A3o%20seu%20neg%C3%B3cio%20voc%C3%AA%20esta%20precisando%3F">
+                <img src="docs/icons/whatsapp-logo-icone.png" alt="Whatsapp">
+            </a>
+
+            <a href="https://www.facebook.com/fenixds.br">
+                <img alt="GitHub" src="../../docs/icons/facebook-logo-icone-.png">
+            </a>
+
+            <a href="https://www.instagram.com/fenixds.br/">
+                <img alt="Linkedin" src="../../docs/icons/instagram-logo-icone.png">
+            </a>
+        </div>
+    </footer>
 </body>
 
 </html>
